@@ -118,11 +118,14 @@ add_vevent (ECalBackendExchange *cbex,
 			icalcomponent_set_dtend (icalcomp, itt);
 		}
 
-		if (!strcmp (x_name, "X-MICROSOFT-CDO-BUSYSTATUS") && !transp) {
+		if (!strcmp (x_name, "X-MICROSOFT-CDO-BUSYSTATUS")) {
 			/* It seems OWA sometimes doesn't set the
 			 * TRANSP property, so set it from the busy
 			 * status.
 			 */
+			if (transp)
+				icalcomponent_remove_property (comp,transp);
+
 			if (!strcmp (x_val, "BUSY"))
 				transp = icalproperty_new_transp (ICAL_TRANSP_OPAQUE);
 			else if (!strcmp (x_val, "FREE"))
@@ -1396,6 +1399,7 @@ receive_objects (ECalBackendSync *backend, EDataCal *cal,
 		g_object_unref (comp);
 	}
 	g_list_free (comps);
+	return status;
 		
  error:	
 	if (comp)
