@@ -1,3 +1,9 @@
+2005-02-11  Sarfraaz Ahmed <asarfraaz@novell.com>
+
+	* calendar/e-cal-backend-exchange-calendar.c (add_vevent) : Always
+	set the TRANSP property from the busy status. Fixes #70283
+	(receive_objects) : Fixed a memory leak. Fixes #72482
+
 2005-02-11  Sushma Rai  <rsushma@novell.com>
 
 	* storage/exchange-config-listener.c (account_changed): Removing the 
